2014-02-17  Michiel Roos <michiel@maxserv.nl>
	* [BUGFIX] Task remove expired entries fails to execute. Thanks to Andreas Beyl
	* [BUGFIX] Missing tables in task remove expired entries. Thanks to Andreas Beyl
	* [BUGFIX] Expired task does not preserve selected tables on edit. Thanks to Loek Hilgersom
	* [TASK] Add OPTIMIZE TABLE option. Thanks to Loek Hilgersom
	* [TASK] Add some more tables to the list in Expired Task. Thanks to Loek Hilgersom
	* [TASK] Refactoring and code cleanup

2013-11-18  Michiel Roos <michiel@maxserv.nl>
	* Add backend module for excluded page inspection

2013-11-14  Michiel Roos <michiel@maxserv.nl>
	* [BUGFIX] #53380: Add option to mark hidden records as deleted instead of actually deleting them. The timestamp of the record will be touched and the task that cleans up 'deleted' records will remove them up at a later time.
	* [TASK] Code cleanup

2013-11-14  Michiel Roos <michiel@maxserv.nl>
	* [TASK] Move exclusion options to page properties
