@@ -24,6 +24,10 @@
 			<label index='tasks.expired.description'>Removes entries older than N days from tables.</label>
 			<label index='tasks.expired.dayLimit'>Delete entries older than given number of days</label>
 			<label index='tasks.expired.additionalInformation'>Remove entries older than %s days from tables: %s</label>
+			<label index='tasks.pastStopTime.title'>Table Cleaner: hide entries that have passed the stop time</label>
+			<label index='tasks.pastStopTime.description'>Hides entries N days past the stoptime in tables.</label>
+			<label index='tasks.pastStopTime.dayLimit'>Hide entries that are past the stoptime the given number of days</label>
+			<label index='tasks.pastStopTime.additionalInformation'>Hide entries older than %s days in tables: %s</label>
 			<label index='tasks.general.additionalInformationExclude'> except from pages %s</label>
 			<label index='tasks.general.additionalInformationExcludeRecursive'> recursively</label>
 			<label index='tasks.general.tables'>Tables</label>
@@ -52,10 +56,14 @@
 			<label index='tasks.deleted.description'>Verwijdert verwijderde rijen ouder dan N dagen van tabellen.</label>
 			<label index='tasks.deleted.dayLimit'>Verwijder 'verwijderde' rijen ouder dan het opgegeven aantal dagen</label>
 			<label index='tasks.deleted.additionalInformation'>Verwijder 'verwijderde' rijen ouder dan %s dagen van tabellen: %s</label>
-			<label index='tasks.expired.title'>Tabel Opschonen: verouderde rijen</label>
-			<label index='tasks.expired.description'>Verwijdert rijen ouder dan N dagen van tabellen.</label>
-			<label index='tasks.expired.dayLimit'>Verwijder rijen ouder dan het opgegeven aantal dagen</label>
-			<label index='tasks.expired.additionalInformation'>Verwijder rijen ouder dan %s dagen van tabellen: %s</label>
+			<label index='tasks.expired.title'>Tabel Opschonen: rijen met verstreken stoptijd</label>
+			<label index='tasks.expired.description'>Verbergt rijen waarvan de stoptijd al N dagen verstreken is.</label>
+			<label index='tasks.expired.dayLimit'>Verbergt rijen waarvan de stoptijd verstreken is met het opgegeven aantal dagen</label>
+			<label index='tasks.expired.additionalInformation'>Verbergt rijen waarvan de stoptijd %s dagen verstreken is in tabellen: %s</label>
+			<label index='tasks.pastStopTime.title'>Tabel Opschonen: verouderde rijen</label>
+			<label index='tasks.pastStopTime.description'>Verwijdert rijen ouder dan N dagen van tabellen.</label>
+			<label index='tasks.pastStopTime.dayLimit'>Verwijder rijen ouder dan het opgegeven aantal dagen</label>
+			<label index='tasks.pastStopTime.additionalInformation'>Verwijder rijen ouder dan %s dagen van tabellen: %s</label>
 			<label index='tasks.general.additionalInformationExclude'> behalve van pagina's %s</label>
 			<label index='tasks.general.additionalInformationExcludeRecursive'> en onderliggende pagina's</label>
 			<label index='tasks.general.tables'>Tabellen</label>
